--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
         <h2>My API Response</h2>
         <div class="card">
             <p><strong>Email:</strong> <span id="email">Loading...</span></p>
-            <p><strong>Current DateTime:</strong> <span id="datetime">Loading...</span></p>
-            <p><strong>GitHub Repo:</strong> <a id="github" href="#" target="_blank">Loading...</a></p>
+            <p><strong>Current_DateTime:</strong> <span id="datetime">Loading...</span></p>
+            <p><strong>Github_Url</strong> <a id="github" href="#" target="_blank">Loading...</a></p>
         </div>
     </div>
 
