--- a/ApiCall/public/index.html
+++ b/ApiCall/public/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>API Response</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <h2>My API Response</h2>
-        <div class="card">
-            <p><strong>Email:</strong> <span id="email">Loading...</span></p>
-            <p><strong>Current_DateTime:</strong> <span id="datetime">Loading...</span></p>
-            <p><strong>Github_Url</strong> <a id="github" href="#" target="_blank">Loading...</a></p>
-        </div>
+      <h2>My API Response</h2>
+      <div class="card">
+        <p>
+          <strong>Email: </strong>
+          <a id="email" href="#" target="_blank">Loading...</a>
+        </p>
+        <p>
+          <strong>Current_DateTime: </strong>
+          <span id="current_datetime">Loading...</span>
+        </p>
+        <p>
+          <strong>Github_Url: </strong>
+          <a id="github_url" href="#" target="_blank">Loading...</a>
+        </p>
+      </div>
     </div>
 
     <script src="call.js"></script>
-</body>
+  </body>
 </html>
